@@ -100,7 +100,7 @@ sub generate_script_1() {
 EOF
 
 	copy1 $lib;
-	emit "/n";
+	emit "\n";
     }
 
     emit <<'EOF';
