@@ -194,6 +194,9 @@ Shorewall 4.4.3
     interface (name ends with +) in /etc/shorewall/interfaces did
     not work correctly in all cases.
 
+5)  IPv4 addresses embedded in IPv6 (e.g., ::192.168.1.5) were
+    incorrectly reported as invalid.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
