@@ -20,6 +20,8 @@ Changes in Shorewall 4.4.3
 
 10)  Add TRACK_PROVIDERS option.
 
+11)  Fix IPv6 address parsing bug.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
